@@ -105,6 +105,9 @@ Release 2.7.0
     HDFS-6917. Add an hdfs debug command to validate blocks, call recoverlease,
     etc. (cmccabe)
 
+    HDFS-7257. Add the time of last HA state transition to NN's /jmx page.
+    (Charles Lamb via wheat9)
+
   OPTIMIZATIONS
 
   BUG FIXES
